fix double border closes #1005

--- a/github-dark.css
+++ b/github-dark.css
@@ -6545,8 +6545,7 @@
   .application-main [style*="background: linear-gradient(#ffffff, #fcfcfc)"],
   section[style="background-color: #fafbfc;"], div[style="background:#fafbfc;"],
   .team-left-column, .render-container.js-actions-page,
-  .deployments-timeline-icon, .TimelineItem-break,
-  .TimelineItem--condensed .TimelineItem-badge,
+  .deployments-timeline-icon, .TimelineItem--condensed .TimelineItem-badge,
   .previewable-comment-form .comment-form-head.tabnav.bg-white {
     background: none !important;
   }
@@ -7102,6 +7101,9 @@
   /* file drag&drop overlay */
   .repo-file-upload-tree-target {
     background: radial-gradient(ellipse at center, #000 0%, rgba(0, 0, 0, .6) 65%, rgba(0, 0, 0, .6) 100%) !important;
+  }
+  .TimelineItem-break {
+    background: linear-gradient(to bottom, rgba(25, 25, 25, .8) 1%, transparent 80%) !important;
   }
   /* light grey gradient */
   .btn:hover, .btn:active, .btn.zeroclipboard-is-hover,
